avoid too much spacing in list items

--- a/webstyle.css
+++ b/webstyle.css
@@ -519,5 +519,6 @@ h1, h2, h3 {
 }
 
 li > p {
-    margin-bottom: 0;
+    margin-bottom: 0px!important;
+    -webkit-margin-after: 0px;
 }
